<resources>
    <string name="app_name">Bayel</string>
    <string name="signup">Регистрация</string>
    <string name="already_has_an_acc">У вас уже есть учетная запись? Войти в...</string>
    <string name="name">Имя...</string>
    <string name="surname">Фамилия...</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
    <string name="_996">+996</string>
    <string name="_999_666_777">999 666 777</string>
    <string name="password">Пароль</string>
    <string name="do_signup">Зарегистрироваться</string>
    <string name="or">Или</string>
    <string name="google">Войти через Google</string>
    <string name="login_to_account">Вход в свою \n учетную запись</string>
    <string name="signin_info">Введите свой адрес электронной почты и пароль \n для входа в систему</string>
    <string name="google_signin">Продолжайте работать с Google</string>
    <string name="or_signin">Или войдите в систему с помощью</string>
    <string name="remember">Запомнить меня</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="auth">Авторизоваться</string>
    <string name="dhannacc">У вас нет учетной записи?</string>
    <string name="signUp">Зарегистрироваться...</string>
    <string name="forgot_password_reset">Забыли пароль</string>
    <string name="reset_password">Сброс пароля</string>
    <string name="email_n">Пожалуйста, введите свой Email или номер \n телефона.</string>
    <string name="infoReset">Ваш адрес электронной почты или номер тел</string>
    <string name="doReset">Сбросить пароль</string>
    <string name="enter_email">Введите Email почты или номер тел...</string>
    <string name="didNotGetCode">Не получили код?</string>
    <string name="send_email">Отправьте email</string>
    <string name="sent_code">Мы отправили ссылку для сброса по адресу</string>
    <string name="check_email">Проверьте свою электронную почту</string>
    <string name="info_confirm">Ваш пароль был успешно сброшен. щелкнуть подтвердите установку нового пароля</string>
    <string name="confirm">Подтвердить</string>
    <string name="info_new_password">Создайте новый пароль. Убедитесь, что он отличается от предыдущие для безопасности</string>
    <string name="make_new_password">Напишите новый пароль</string>
    <string name="password_new">Пароль</string>
    <string name="make_password">Нопишите новый пароль</string>
    <string name="Confirm_password">Подтвердить пароль</string>
    <string name="confirm_password">Повторно введите пароль</string>
    <string name="update_password">Обновить пароль</string>
    <string name="group_selection_catalog">Выбор группового запроса</string>
    <string name="forMyself">Для себя</string>
    <string name="search_shop">Поиск магазина</string>
    <string name="hutork_900g">Пельмени ХУТОРОК 900г</string>
    <string name="choose_group_request">Выбор группового запроса</string>
    <string name="desc">Пельмени домашние классические Наши пельмени – это сочетание нежного теста и сочной мясной начинки. Приготовлены по традиционному рецепту, с использованием свежего фарша из говядины и курицы. Идеальны для быстрого ужина или семейного обеда. Просто добавьте любимые специи и наслаждайтесь вкусом домашней кухни!</string>
    <string name="weight_900g">- Вес: 900 г</string>
    <string name="experation_date">- Срок годности: 6 месяцев (при -18°C)</string>
    <string name="cooking_method">- Способ приготовления: варить 7-10 минут в подсоленной воде.</string>
    <string name="price">Цена: 480 сом.</string>
    <string name="in_stock">В наличии:</string>
    <string name="_537">537 штк</string>
    <string name="choose_shop">Выберите магазин</string>
    <string name="pay_with">Оплата с помощью:</string>
    <string name="cash">Наличными</string>
    <string name="debt">Долгом</string>
    <string name="request">Запросить</string>
    <string name="_50">50 штк</string>
    <string name="requested_products">Запрошенные товары</string>
    <string name="statistic">Статистика</string>
    <string name="calendar">Календарь</string>
    <string name="income">● Доход</string>
    <string name="expenditure">● Расход</string>
    <string name="debt_tv">● Долг</string>
    <string name="bonus">● Бонус</string>
    <string name="date">Дата 19.09.2024</string>
    <string name="all_count">Общее количество:</string>
    <string name="txt_income">Доход</string>
    <string name="_966_products">966 товаров</string>
    <string name="remains">Остаток</string>
    <string name="toybos">Пельмени Тойбос 244 штк</string>
    <string name="expenses">Расходы</string>
    <string name="_145_000_c">145.000 c</string>
    <string name="_245_000_c">245.000 c</string>
    <string name="debt_st">Долг</string>
    <string name="repaid_debt">Погашенный долг</string>
    <string name="_45_000_c">45.000 c</string>
    <string name="bonuses">Бонусы</string>
    <string name="total_balance">Общий баланс</string>
    <string name="_602_000_c">602.000 C</string>
    <string name="сalculation">Расчёт</string>
    <string name="for_myself">Для себя</string>
    <string name="you_choose_these_products">Вы выбрали эти товары</string>
    <string name="general_count">Общее количество:</string>
    <string name="_130_count">130 штк</string>
    <string name="general_price">Общая цена:</string>
    <string name="_54_300_som">54.300 сом</string>
    <string name="pay_with_">Оплата с помощью:</string>
    <string name="your_email">Ваш Email</string>
    <string name="your_number">Ваш номер телефона</string>
    <string name="cell_number">Номер телефона</string>
    <string name="living_area">Город проживание</string>
    <string name="surnameName">Ваш Ф.И.О</string>
    <string name="generalInfo">Общая информация</string>
    <string name="addShop">Добавить магазин</string>
    <string name="save">Сохранить</string>
    <string name="fill_fields">Заполните поля...</string>
</resources>