<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_28dp"
        android:layout_marginTop="@dimen/_32dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/black_go_back"
        app:layout_constraintBottom_toTopOf="@id/tvTitle"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_new_password"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/ivBack"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_16dp"/>

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_new_password"
        android:textSize="@dimen/_14sp"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_8dp" />

    <LinearLayout
        android:id="@+id/lnCodeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/tvInstructions"
        app:layout_constraintTop_toBottomOf="@id/tvInstructions"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_new"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_16dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48dp"
            android:background="@drawable/bg_input"
            android:hint="@string/make_password"
            android:inputType="textPassword"
            android:textSize="@dimen/_14sp"
            android:paddingStart="@dimen/_12dp"
            android:paddingEnd="@dimen/_20dp"
            android:layout_marginTop="@dimen/_12dp"
            android:drawableEnd="@drawable/ic_eye_off"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Confirm_password"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_16dp"/>

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48dp"
            android:background="@drawable/bg_input"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textSize="@dimen/_14sp"
            android:paddingStart="@dimen/_12dp"
            android:paddingEnd="@dimen/_20dp"
            android:layout_marginTop="@dimen/_12dp"
            android:drawableEnd="@drawable/ic_eye_off"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_update_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="@dimen/_24dp"
        android:text="@string/update_password"
        android:textSize="@dimen/_16sp"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        android:background="@drawable/bg_button"
        app:layout_constraintTop_toBottomOf="@id/lnCodeContainer"
        app:layout_constraintStart_toStartOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>