<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth_background"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_28dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_previous"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTopText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_28dp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="@dimen/thirty_two_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <TextView
        android:id="@+id/tvBottomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/already_has_an_acc"
        android:textColor="@color/white"
        android:textSize="@dimen/twelve_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTopText" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/tvBottomText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_26dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="@dimen/_48dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:background="@drawable/bg_input"
                    android:hint="@string/name"
                    android:padding="@dimen/_12dp"
                    android:textSize="@dimen/_14sp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_48dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_input"
                    android:hint="@string/surname"
                    android:padding="@dimen/_12dp"
                    android:textSize="@dimen/_14sp" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48dp"
                android:layout_marginBottom="@dimen/_12dp"
                android:background="@drawable/bg_input"
                android:hint="@string/email"
                android:padding="@dimen/_12dp"
                android:textSize="@dimen/_14sp" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48dp"
                android:background="@drawable/bg_input"
                android:hint="@string/_999_666_777"
                android:inputType="phone"
                android:textSize="@dimen/_14sp"
                android:paddingStart="@dimen/_30dp"
                android:gravity="center_vertical"
                android:text="@string/_996" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48dp"
                android:background="@drawable/bg_input"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="@dimen/_14sp"
                android:paddingStart="@dimen/_12dp"
                android:paddingEnd="@dimen/_20dp"
                android:layout_marginTop="@dimen/_12dp"
                android:drawableEnd="@drawable/ic_eye_off"
                android:gravity="center_vertical"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/acbSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_26dp"
                android:layout_marginBottom="@dimen/_26dp"
                android:minHeight="@dimen/_56dp"
                android:background="@drawable/bg_button"
                android:text="@string/do_signup"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="#DDD" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:text="@string/or"
                    android:textColor="@color/gray" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="#DDD" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbEnterGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:minHeight="56dp"
                android:text="@string/google"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#000"
                app:icon="@drawable/ic_google"
                app:iconGravity="textStart"
                app:iconPadding="12dp"
                app:iconTint="@null"
                app:backgroundTint="@null"
                android:background="@drawable/bg_input" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
