<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">


    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_28dp"
        android:layout_marginTop="@dimen/_32dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/black_go_back"
        app:layout_constraintBottom_toTopOf="@id/tvForgotPassword"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_reset"
        android:textSize="@dimen/_20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ivBack"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_16dp" />

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_n"
        android:textSize="@dimen/_14sp"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_8dp" />

    <TextView
        android:id="@+id/tvInfoOfReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sp"
        android:layout_marginBottom="@dimen/_20dp"
        android:text="@string/infoReset"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInstructions" />

    <EditText
        android:id="@+id/etEmailOrPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:textSize="@dimen/_14sp"
        android:padding="@dimen/_12dp"
        android:background="@drawable/bg_input"
        app:layout_constraintTop_toBottomOf="@id/tvInfoOfReset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_24dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:text="@string/doReset"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        android:background="@drawable/bg_button"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/etEmailOrPhone"
        android:layout_marginTop="24dp" />


</androidx.constraintlayout.widget.ConstraintLayout>