<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/auth_background"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvTopText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_28dp"
        android:text="@string/login_to_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/thirty_two_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <TextView
        android:id="@+id/tvBottomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:textAlignment="center"
        android:text="@string/signin_info"
        android:textColor="@color/white"
        android:textSize="@dimen/twelve_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTopText" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/tvBottomText">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_26dp">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:minHeight="56dp"
                android:text="@string/google_signin"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#000"
                app:icon="@drawable/ic_google"
                app:iconGravity="textStart"
                app:iconPadding="12dp"
                app:iconTint="@null"
                app:backgroundTint="@null"
                android:background="@drawable/bg_input" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="#DDD" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:text="@string/or_signin"
                    android:textColor="@color/gray" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="#DDD" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48dp"
                android:layout_marginBottom="@dimen/_12dp"
                android:background="@drawable/bg_input"
                android:hint="@string/_999_666_777"
                android:padding="@dimen/_12dp"
                android:textSize="@dimen/_14sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48dp"
                android:background="@drawable/bg_input"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="@dimen/_14sp"
                android:paddingStart="@dimen/_12dp"
                android:paddingEnd="@dimen/_20dp"
                android:layout_marginTop="@dimen/_12dp"
                android:drawableEnd="@drawable/ic_eye_off"
                android:gravity="center_vertical"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="@dimen/_6dp">

                <CheckBox
                    android:id="@+id/cbRememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14sp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textSize="@dimen/_14sp"
                    android:textStyle="bold"
                    android:textColor="@color/navy_blue"
                    android:focusable="true"
                    android:layout_weight="1"
                    android:gravity="end" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbAuth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginBottom="@dimen/_26dp"
                android:minHeight="@dimen/_56dp"
                android:text="@string/auth"
                android:textColor="@android:color/white"
                app:backgroundTint="@null"
                android:textSize="@dimen/_16sp"
                android:background="@drawable/bg_button"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="@dimen/_6dp"
                tools:ignore="MissingConstraints"
                >

                <TextView
                    android:id="@+id/tvDoesNotHasAnAcc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dhannacc"
                    android:textSize="@dimen/_14sp"
                    android:textStyle="bold"
                    android:textColor="@color/gray"
                    android:focusable="true"
                    android:ellipsize="end"
                    android:maxLines="1" />

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signUp"
                    android:textSize="@dimen/_14sp"
                    android:textStyle="bold"
                    android:textColor="@color/navy_blue"
                    android:focusable="true"
                    android:ellipsize="end"
                    android:maxLines="1" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>